# embedded_font_generator

./: Cargo.toml  README.md
example_fonts/: simple.out
src/: error.rs  imagedecode.rs  lib.rs
src/tools/: generate.rs
